tuned logistic regression

--- a/Capstone - Pre-Processing & Modeling.ipynb
+++ b/Capstone - Pre-Processing & Modeling.ipynb
@@ -43,7 +43,8 @@
     "from dmba import classificationSummary, regressionSummary\n",
     "from sklearn.linear_model import LogisticRegression, LogisticRegressionCV\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
-    "from dmba import plotDecisionTree, gainsChart, liftChart, classificationSummary, regressionSummary, adjusted_r2_score, AIC_score, BIC_score\n"
+    "from dmba import plotDecisionTree, gainsChart, liftChart, classificationSummary, regressionSummary, adjusted_r2_score, AIC_score, BIC_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold"
    ]
   },
   {
@@ -4891,9 +4892,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest \n",
+      "Base 90 Model \n",
+      "\n",
+      "Confusion Matrix (Accuracy 0.7297)\n",
+      "\n",
+      "       Prediction\n",
+      "Actual  0  1\n",
+      "     0 43 15\n",
+      "     1 15 38\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.74      0.74      0.74        58\n",
+      "           1       0.72      0.72      0.72        53\n",
+      "\n",
+      "    accuracy                           0.73       111\n",
+      "   macro avg       0.73      0.73      0.73       111\n",
+      "weighted avg       0.73      0.73      0.73       111\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Base 90\n",
     "rf_90 = RandomForestClassifier()\n",
@@ -5015,39 +5041,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best: 0.944444 using {'C': 100, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.944444 (0.085346) with: {'C': 100, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.944444 (0.085346) with: {'C': 100, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.944444 (0.085346) with: {'C': 100, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.944444 (0.085346) with: {'C': 10, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.944444 (0.085346) with: {'C': 10, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.944444 (0.085346) with: {'C': 10, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.944444 (0.085346) with: {'C': 1.0, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.944444 (0.085346) with: {'C': 1.0, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.944444 (0.085346) with: {'C': 1.0, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.790000 (0.042295) with: {'C': 0.1, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.790000 (0.042295) with: {'C': 0.1, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.790000 (0.042295) with: {'C': 0.1, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.790000 (0.042295) with: {'C': 0.01, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.790000 (0.042295) with: {'C': 0.01, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.790000 (0.042295) with: {'C': 0.01, 'penalty': 'l2', 'solver': 'liblinear'}\n"
+     ]
+    }
+   ],
    "source": [
-    "lr_30 = LogisticRegression (penalty=\"l2\" , C=1e42, solver='liblinear' )\n",
+    "# Tuned 30\n",
+    "model = LogisticRegression()\n",
+    "solvers = ['newton-cg', 'lbfgs', 'liblinear']\n",
+    "penalty = ['l2']\n",
+    "c_values = [100, 10, 1.0, 0.1, 0.01]\n",
+    "\n",
+    "grid = dict(solver=solvers,penalty=penalty,C=c_values)\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "grid_search = GridSearchCV(estimator=model, param_grid=grid, n_jobs=-1, cv=cv, scoring='accuracy',error_score=0)\n",
+    "grid_result = grid_search.fit(X_val_30, y_val_30)\n",
+    "\n",
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+    "means = grid_result.cv_results_['mean_test_score']\n",
+    "stds = grid_result.cv_results_['std_test_score']\n",
+    "params = grid_result.cv_results_['params']\n",
+    "for mean, stdev, param in zip(means, stds, params):\n",
+    "    print(\"%f (%f) with: %r\" % (mean, stdev, param))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression \n",
+      "Base 30 Model \n",
+      "\n",
+      "Confusion Matrix (Accuracy 0.8108)\n",
+      "\n",
+      "       Prediction\n",
+      "Actual  0  1\n",
+      "     0 57 17\n",
+      "     1  4 33\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.77      0.84        74\n",
+      "           1       0.66      0.89      0.76        37\n",
+      "\n",
+      "    accuracy                           0.81       111\n",
+      "   macro avg       0.80      0.83      0.80       111\n",
+      "weighted avg       0.84      0.81      0.82       111\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_30 = LogisticRegression (penalty=\"l2\" , C=100, solver='newton-cg' )\n",
     "lr_30.fit(X_train_30, y_train_30)\n",
     "\n",
     "lr_pred_30 = lr_30.predict(X_test_30)\n",
+    "\n",
+    "print(\"Logistic Regression \\nTuned 30 Model \\n\")\n",
     "classificationSummary(y_test_30, lr_pred_30)\n",
     "print(classification_report(y_test_30, lr_pred_30))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best: 0.937778 using {'C': 100, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.937778 (0.107405) with: {'C': 100, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.937778 (0.107405) with: {'C': 100, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.937778 (0.107405) with: {'C': 100, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.931111 (0.109522) with: {'C': 10, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.931111 (0.109522) with: {'C': 10, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.931111 (0.109522) with: {'C': 10, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.887778 (0.129524) with: {'C': 1.0, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.887778 (0.129524) with: {'C': 1.0, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.875556 (0.127056) with: {'C': 1.0, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.800000 (0.157762) with: {'C': 0.1, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.800000 (0.157762) with: {'C': 0.1, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.830000 (0.140198) with: {'C': 0.1, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.733333 (0.084327) with: {'C': 0.01, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.733333 (0.084327) with: {'C': 0.01, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.733333 (0.084327) with: {'C': 0.01, 'penalty': 'l2', 'solver': 'liblinear'}\n"
+     ]
+    }
+   ],
    "source": [
-    "lr_60 = LogisticRegression (penalty=\"l2\" , C=1e42, solver='liblinear' )\n",
+    "# Tuned 60\n",
+    "grid = dict(solver=solvers,penalty=penalty,C=c_values)\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "grid_search = GridSearchCV(estimator=model, param_grid=grid, n_jobs=-1, cv=cv, scoring='accuracy',error_score=0)\n",
+    "grid_result = grid_search.fit(X_val_60, y_val_60)\n",
+    "\n",
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+    "means = grid_result.cv_results_['mean_test_score']\n",
+    "stds = grid_result.cv_results_['std_test_score']\n",
+    "params = grid_result.cv_results_['params']\n",
+    "for mean, stdev, param in zip(means, stds, params):\n",
+    "    print(\"%f (%f) with: %r\" % (mean, stdev, param))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix (Accuracy 0.8108)\n",
+      "\n",
+      "       Prediction\n",
+      "Actual  0  1\n",
+      "     0 55 14\n",
+      "     1  7 35\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.89      0.80      0.84        69\n",
+      "           1       0.71      0.83      0.77        42\n",
+      "\n",
+      "    accuracy                           0.81       111\n",
+      "   macro avg       0.80      0.82      0.80       111\n",
+      "weighted avg       0.82      0.81      0.81       111\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_60 = LogisticRegression (penalty=\"l2\" , C=100, solver='newton-cg' )\n",
     "lr_60.fit(X_train_60, y_train_60)\n",
     "\n",
     "lr_pred_60 = lr_60.predict(X_test_60)\n",
+    "\n",
+    "print(\"Logistic Regression \\nTuned 60 Model \\n\")\n",
     "classificationSummary(y_test_60, lr_pred_60)\n",
     "print(classification_report(y_test_60, lr_pred_60))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best: 0.782222 using {'C': 10, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.764444 (0.169079) with: {'C': 100, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.764444 (0.169079) with: {'C': 100, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.764444 (0.169079) with: {'C': 100, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.775556 (0.150292) with: {'C': 10, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.775556 (0.150292) with: {'C': 10, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.782222 (0.155571) with: {'C': 10, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.782222 (0.155571) with: {'C': 1.0, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.782222 (0.155571) with: {'C': 1.0, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.782222 (0.155571) with: {'C': 1.0, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.770000 (0.135360) with: {'C': 0.1, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.770000 (0.135360) with: {'C': 0.1, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.770000 (0.135360) with: {'C': 0.1, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.653333 (0.077746) with: {'C': 0.01, 'penalty': 'l2', 'solver': 'newton-cg'}\n",
+      "0.653333 (0.077746) with: {'C': 0.01, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.653333 (0.077746) with: {'C': 0.01, 'penalty': 'l2', 'solver': 'liblinear'}\n"
+     ]
+    }
+   ],
    "source": [
-    "lr_90 = LogisticRegression (penalty=\"l2\" , C=1e42, solver='liblinear' )\n",
+    "# Tuned 90\n",
+    "grid = dict(solver=solvers,penalty=penalty,C=c_values)\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "grid_search = GridSearchCV(estimator=model, param_grid=grid, n_jobs=-1, cv=cv, scoring='accuracy',error_score=0)\n",
+    "grid_result = grid_search.fit(X_val_90, y_val_90)\n",
+    "\n",
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+    "means = grid_result.cv_results_['mean_test_score']\n",
+    "stds = grid_result.cv_results_['std_test_score']\n",
+    "params = grid_result.cv_results_['params']\n",
+    "for mean, stdev, param in zip(means, stds, params):\n",
+    "    print(\"%f (%f) with: %r\" % (mean, stdev, param))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix (Accuracy 0.7117)\n",
+      "\n",
+      "       Prediction\n",
+      "Actual  0  1\n",
+      "     0 41 17\n",
+      "     1 15 38\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.73      0.71      0.72        58\n",
+      "           1       0.69      0.72      0.70        53\n",
+      "\n",
+      "    accuracy                           0.71       111\n",
+      "   macro avg       0.71      0.71      0.71       111\n",
+      "weighted avg       0.71      0.71      0.71       111\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_90 = LogisticRegression (penalty=\"l2\" , C=10, solver='liblinear' )\n",
     "lr_90.fit(X_train_90, y_train_90)\n",
     "\n",
     "lr_pred_90 = lr_90.predict(X_test_90)\n",
